<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:elevation="4dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_gender"
        style="@style/ListItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mf"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name_asc"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toStartOf="@+id/text_age"
        app:layout_constraintStart_toEndOf="@+id/text_gender"
        app:layout_constraintTop_toTopOf="@+id/text_gender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_age"
        style="@style/ListItemStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/age"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toStartOf="@+id/text_id"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_gender" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_id"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/id_asc"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
        app:layout_constraintStart_toEndOf="@+id/text_age"
        app:layout_constraintTop_toTopOf="@+id/text_gender" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_id"
        app:layout_constraintTop_toTopOf="@+id/text_gender"
        app:srcCompat="@drawable/ic_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>