<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:elevation="4dp"
    >

    <!--<Button-->
        <!--android:id="@+id/button_filter_gender"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--style="@style/FilterHeaderItemStyle"-->
        <!--android:text="@string/m_f"-->
        <!--/>-->

    <TextView
        android:id="@+id/text_filter_gender"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/m_f" />

    <!--<Button-->
        <!--android:id="@+id/button_sort_name"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="3"-->
        <!--style="@style/FilterHeaderItemStyle"-->
        <!--android:text="name\u2193"-->
        <!--/>-->

    <TextView
        android:id="@+id/text_sort_name"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/name" />

    <!--<Button-->
        <!--android:id="@+id/button_sort_age"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--style="@style/FilterHeaderItemStyle"-->
        <!--android:text="@string/age"-->
        <!--/>-->

    <TextView
        android:id="@+id/text_sort_age"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/age" />

    <ImageButton
        android:id="@+id/button_filter_menu"
        style="@style/ListItemStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_filter"
        android:contentDescription="@string/filter_icon" />

</LinearLayout>