<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_name"
        style="@style/NameStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/none"
        app:layout_constraintBottom_toTopOf="@+id/text_age"
        app:layout_constraintEnd_toStartOf="@+id/btn_delete_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Jeremy Wilder" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_age"
        style="@style/DetailsStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/text_gender"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete_profile"
        app:layout_constraintStart_toEndOf="@+id/text_gender"
        app:layout_constraintTop_toTopOf="@+id/text_gender"
        tools:text="99" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_gender"
        style="@style/DetailsStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/none"
        app:layout_constraintBottom_toTopOf="@+id/text_hobbies_label"
        app:layout_constraintEnd_toStartOf="@+id/text_age"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Male" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_hobbies_label"
        style="@style/SubheaderStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hobbies"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete_profile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_gender"
        app:layout_constraintTop_toBottomOf="@+id/text_gender" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_delete_profile"
        app:layout_constraintStart_toStartOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_hobbies_label">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_hobbies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ellipsize="end"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:text="@string/none"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            tools:ignore="Autofill,LabelFor"
            tools:text="Lorem ipsum dolor sit amet, molestiae vulputate ea has, at per labore verear regione. Option mandamus adversarium at cum. Ei pri debet graece. Ius vero homero id. Postulant theophrastus ut his, esse iusto cu mel, eum cu tantas animal. " />

    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save_changes"
        style="@style/FabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_delete_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        app:srcCompat="@drawable/ic_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>